--- a/templates/about.html
+++ b/templates/about.html
@@ -6,7 +6,7 @@
     <title>Про нас</title>
 </head>
 <body>
-    <header>Онлайн-книгарня</header>
+    <header></header>
     <nav>
         <a href="{{ url_for('home') }}">Головна</a>
         <a href="{{ url_for('cart') }}">Кошик</a>
